fidoconfig 0.10
---------------
(released on Mon May 22 14:58:56 CEST 2000)


----- cvs ci ------
Sat Jun  3 21:57:51 NOVST 2000
max:
* fixed my yesterday bug in fgetsUntil0

----- cvs ci ------
Thu Jun  2 12:04:42 NOVST 2000
max:
* fixed fgetsUntil0 function (thanx to Gena Makhomed)
* added token setConsoleTitle for win32 platform
* added xstr* functions from hpt
* added token screenloglevels

----- cvs ci ------
Thu Jun  1 11:51:34 NOVST 2000
max (patch from Lev Serebryakov):
* new link token ForwardAreaPriority <number> for hpt
* new link token ForwardFilePriority <number> for htick
* new link token RemoteFileRobot <string> for htick
* new link token ForwardFileRequestFile <file> for htick
* new link token forwardFileRequests <bool> for htick

----- cvs ci ------
Sat May 27 10:21:30 NOVST 2000
max:
* dupe base type set to hashdupes with msgid as default
* remove dupeSize (unused)
* loglevels documentation

----- cvs ci ------
Thu May 25 15:22:21 NOVST 2000
max:
* check if path already have been parsed (fix possible memory leaks)

----- cvs ci ------
Wed May 24 00:15:52 CEST 2000
mtt:
* fixed fidoInst
	
----- cvs ci ------
Tue May 23 22:36:28 NOVST 2000
max (patch from Lev Serebryakov):
* added tokens ConvertShortNames, ConvertLongNames for htick
	
----- cvs ci ------
Mon May 22 14:03:38 CEST 2000
mtt:
* made some release adjustements
* changed version to numer 0.10

----- cvs ci ------
Mon May 22 11:40:00 NOVST 2000
max:
* autoPause added to docs
* uppercase area's group for Golded (patch from Alex Bronin)

----- cvs ci ------
Wed May 17 18:39:00 UTC 2000
sms:
* fixed double deallocation of viaStr in new routing code

----- cvs ci ------
Wed May 17 21:40:28 NOVST 2000
max (patch from Alex Bronin):
* added token busyFileDir for htick
* added -sendorig option to filearea

----- cvs ci ------
Wed May 15 07:39:00 UTC 2000
sms:
* using direxist() from smapi instead of readdir in parsePath()

----- cvs ci ------
Tue May 16 20:28:45 NOVST 2000
max: