@@ -4,6 +4,12 @@ fidoconfig 0.10
 
 
 ----- cvs ci ------
+Sun Jun  4 14:19:57 NOVST 2000
+max:
+* readConfig(void) changed to readConfig(char *cfgFile)
+* tparser support command via cmdline (run tparser --help)
+
+----- cvs ci ------
 Sat Jun  3 21:57:51 NOVST 2000
 max:
 * fixed my yesterday bug in fgetsUntil0
